and if you are then it re-subscribes you to the thread after saving the post.
Added password hashing for forums that require or support it
Removed delete option from post view context menu when not users post
Added keyboard mod options in settings which displays a more suitable keyboard when editing posts
Improved some post display handling

*** 0.9.12 ***

Man I hope this is the final fix for the xmlrpclib python version conflicts :)
Added 'Edit' to message view context menu 

*** 0.9.11 ***

Fix for xmlrpclib for older python versions
Minor skin adjustments in message view for links/images overlays
Fix progress bar not showing on posts view
Added the ability to edit your own posts

*** 0.9.10 ***

Fix in xmlrpc Transport for older python versions

*** 0.9.9 ***

Changed session cookie handling so it will hopefully work across python versions
Added post count, activity and status to posts
Changed online indicator to an icon in posts

*** 0.9.8 ***

Fixed/Changed progress bar and improved progress updating
Added 'Enable Debug Logging' option in settings which turns on more detailed logging
Empty forums now show a 'Empty Forum' dialog instead of the error dialog
Fix handling of failed forum change
Added some missing images

*** 0.9.7 ***

Fixed error in post failure reporting

*** 0.9.6 ***

Logged in status now checks api response headers value to catch expired login (previously just set to true on successful login)
Improved error handling and messages, should help with lost focus on errors
When adding Tapatalk forum, adds favicon to the logo list (in case there is nothing better)
Added the ability to remove/add built-in forums from the forums list
Fixed a bug with page display being blank on PM's
Fixed some issues with quoting from the message view
Removed all translation code as google now has only a paid translation service
Fixes some preview issues in the 'Post Reply' dialog
Cleaned out unused images, fixed some scrollbars

*** 0.9.5 ***
