@@ -112,6 +112,7 @@
     <string id="30232">Edit</string>
     <string id="30233">Enable MyBB edit post bug re-subscribe fix</string>
     <string id="30234">Use keyboard mod when writing posts</string>
+    <string id="30235">Enable SSL connections (https)</string>
     
     <string id="3000">Prev</string> <!-- Previous -->
     <string id="3001">Next</string>
