@@ -5,6 +5,7 @@
     <setting id="open_thread_to_newest" type="bool" label="30001" default="true" />
     <setting id="reverse_sort" type="bool" label="30002" default="false" />
     <setting id="use_mod_keyboard" type="bool" label="30234" default="false" />
+    <setting id="enable_ssl" type="bool" label="30235" default="false" />
     <setting id="debug" type="bool" label="30228" default="false" />
     <setting id="do_mybb_edit_bug_fix" type="bool" label="30233" default="true" />
     <setting id="color_mode" type="enum" label="30005" lvalues="30010|30011|30012" default="0" enable="false" />
